Создана форма создания объектов

--- a/web/html/menu_create.html
+++ b/web/html/menu_create.html
@@ -9,12 +9,13 @@
 {% endblock %}
 
 {% block body %}
+<h1>Раздел создания объектов</h1>
 <table class="table-main">
     <tr>
         <td><table class="table-form">
             <tr><td><h1>Навыки</h1></td></tr>
             <tr><td><a href="#">Список навыков</a></td></tr>
-            <tr><td><a href="#">Создать навык</a></td></tr>
+            <tr><td><a href="/form_create/ability">Создать навык</a></td></tr>
             <tr><td><a href="#">Найти навык</a></td></tr>
         </table></td>
         <td><table class="table-form">
