--- a/web/html/base.html
+++ b/web/html/base.html
@@ -12,7 +12,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="\">О нас</a>
         <a href="\form_create">Формы создания</a>
-        <a href="#">Онлайн игры</a>
+        <a href="\chart">Статистика игры</a>
         <a href="#">Статистика</a>
         <!--<a href="#">Контакты</a>-->
     </div>
